trunk/Archive2/5d/b116cb7e1b653e/output
main.cpp:22:5: error: no matching function for call to 'foo'
    foo(make_integer_sequence<int, 3>());
    ^~~
main.cpp:14:6: note: candidate template ignored: substitution failure [with T = int]: deduced non-type template argument does not have the same type as the its corresponding template parameter ('int' vs 'std::size_t' (aka 'unsigned long'))
void foo(integer_sequence<T, Is...> is) 
     ^
1 error generated.
